--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Hero -->
   <section class="mx-auto max-w-6xl px-4 pt-16 pb-14">
     <div class="grid md:grid-cols-[240px_1fr] gap-8 items-center">
-      <img src="https://images.unsplash.com/photo-1541534401786-2077eed87a56?q=80&w=400&auto=format&fit=crop"
+      <img src="profpic.jpg"
            alt="Richard Tompos" class="h-40 w-40 md:h-56 md:w-56 rounded-full object-cover ring-4 ring-white/10 shadow-2xl mx-auto md:mx-0">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Richard Tompos</h1>
