--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="mx-auto max-w-6xl px-4 pt-16 pb-14">
     <div class="grid md:grid-cols-[240px_1fr] gap-8 items-center">
       <img src="profpic.jpg"
-           alt="Richard Tompos" class="h-40 w-40 md:h-56 md:w-56 rounded-full object-cover ring-4 ring-white/10 shadow-2xl mx-auto md:mx-0">
+           alt="Richard Tompos" class="h-40 w-40 md:h-56 md:w-56 rounded-full object-cover ring-4 ring-red-600 shadow-lg mx-auto md:mx-0">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Richard Tompos</h1>
         <p class="mt-2 text-lg md:text-xl text-slate-100/90 font-semibold">Full Stack Developer</p>
